# SompoAuto

./: .env.example  .gitignore  Practices.md  README.md  codebase-analysis.md  contextoSombo.md  docker-compose.yml  feature-design.md  feature-development-progress.md  feature-documentation.md  package.json  render.yaml  run-backend-local.cmd  run-frontend-local.cmd  sprint1.md  start-local.cmd  technology.md
backend/: README.md  pyproject.toml
backend/src/backend/: db.py  main.py  models.py  schemas.py
backend/src/backend/agents/: __init__.py  registry.py
backend/src/backend/api/: __init__.py  routes.py
backend/src/backend/core/: config.py
backend/src/backend/runtime/: openclaw.py
backend/src/backend/services/: analytics.py  bootstrap.py  storage.py  workflow.py
backend/tests/: conftest.py  test_runs.py
cloudflare/: README.md
cloudflare/api-gateway/: package-lock.json  package.json  wrangler.toml
cloudflare/api-gateway/src/: index.ts
deploy/docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: SectionCard.tsx  StatusChip.tsx
frontend/src/pages/: HourlyReportsPage.tsx  PortfolioOverviewPage.tsx  RunDetailPage.tsx  RunsPage.tsx  ScenarioUploadPage.tsx
frontend/src/types/: api.ts
sample_data/generated_images/: image_prompts.json
sample_data/high-risk/: scenario.json
sample_data/image-risk/: scenario.json
sample_data/low-risk/: scenario.json
scripts/: dev-start.ps1  dev-stop.ps1
(+1 files in other folders)
